force-app/main/default/objects/player__c/player__c.object-meta.xml
<CustomObject>
    <label>player</label>
    <nameField>
        <label>player Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>players</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>