force-app/main/default/objects/player__c/fields/players_A__c.field-meta.xml
<CustomField>
    <fullName>players_A__c</fullName>
    <label>players A</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Virat</fullName>
            </value>
            <value>
                <fullName>Maxi</fullName>
            </value>
            <value>
                <fullName>Faf</fullName>
            </value>
            <value>
                <fullName>DK</fullName>
            </value>
            <value>
                <fullName>Josh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>